minor spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ h1 {
 }
 
 h2 {
-    margin: 0;
+    margin: 0 0 5px 0;
 }
 
 .board {
